İmg,div,ul,ol kullanımları

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
 <h2>Marvel</h2>
 <h3>Marvel Sinematik Evreni</h3>
-
+<img height="500" width="400" src="https://cdn1.ntv.com.tr/gorsel/qBNkKnDRnUSSQ0Z38eB4hA.jpg?width=1000&mode=both&scale=both&v=1602055239312" alt="Marvel: Yenilmezler">
+<p>Yenilmezler (İngilizce: The Avengers), bazı ülkelerde Avengers Assemble olarak da bilinmektedir. Marvel Studios tarafından üretilen ve Marvel Comics'in süper kahraman ekibidir</p>
 <p>
     Ilk MSE filmi Iron Man (2008) olup imtiyazın birinci evresini başlattı, evre almaşık kurgu Yenilmezler (2012) filmiyle sonuçlandı. 
     İkinci evre Iron Man 3 (2013) filmiyle başlayıp 2015'te piyasaya çıkan almaşık kurgu 
@@ -22,4 +23,33 @@
     Marvel Television, ABC kanalında 2013 yılında yayınlanan 
     Agents of S.H.I.E.L.D. dizisiyle birlikte evreni televizyon dizilerine de genişletmiş oldu.
 </p>
+
+<h3>Diğer İlgi Alanlarım</h3>
+
+<div>
+    <ol>
+      <li>Kitap
+          <ul>
+              <a href="https://www.goodreads.com/book/show/34520246-lacivert?from_search=true&from_srp=true&qid=rPXawMlTwc&rank=2" target="_blank"><li>Lacivert</li></a>              
+              <li>Safir</li>
+              <li>Amber</li>
+          </ul>
+      </li>
+      <li>Dizi
+          <ul>
+              <a href="https://www.imdb.com/title/tt2661044/" target="_blank"><li>The 100</li></a>
+              <li>Dark</li>
+              <li>Black Mirror</li>
+          </ul>
+      </li>
+
+      <li>Film
+        <ul>
+            <a href="https://www.imdb.com/title/tt0295297/" target="_blank"><li>Harry Potter ve Sırlar Odası</li></a>
+            <li>Hızlı ve Öfkeli</li>
+            <li>İncir Reçeli</li>
+        </ul>
+      </li>
+    </ol>
+</div>
 
